# NLP

./: pyproject.toml
notebooks/: notebook_01.ipynb  notebook_02.ipynb  notebook_03.ipynb  notebook_04_spacy_vs_nltk.ipynb  notebook_05_spacy.ipynb
notes/: 1.md
