[tool.poetry]
name = "nlp"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas <santokalayil@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2023.10.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
